Adjustment on Login/Register component

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -40,8 +40,8 @@
       </div>
 
       <!-- Error Message -->
-      <div *ngIf="errorMessage" class="alert alert-danger py-1">
-        {{ errorMessage }}
+      <div *ngIf="error" class="alert alert-danger py-1">
+        {{ error }}
       </div>
 
       <!-- Submit -->
